# xtp-test-rust

./: Cargo.toml  LICENSE  README.md  xtp.toml
.github/workflows/: ci.yml  release.yml
examples/: basic.rs
src/: lib.rs
wasm/: host.wasm  user.wasm
