[package]
name = "xtp-test"
version = "0.0.1-rc4"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Dylibso, Inc. <support@dylibso.com>"]
description = "A testing framework for XTP / Extism plugins."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
extism-pdk = "1.1.0"

[[example]]
name = "basic"
crate-type = ["cdylib"]
