[package]
name = "xtp-test"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Dylibso, Inc. <support@dylibso.com>"]
description = "A testing framework for XTP / Extism plugins."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
extism-pdk = "1.1.0"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[[example]]
name = "basic"
crate-type = ["cdylib"]
